// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`compiler: vModel transform > modifiers > .lazy 1`] = `
"import { vModelText as _vModelText, withDirectives as _withDirectives, on as _on, template as _template } from 'vue/vapor';
const t0 = _template("<input>")

export function render(_ctx) {
  const n0 = t0()
  _withDirectives(n0, [[_vModelText, () => _ctx.model, void 0, { lazy: true }]])
  _on(n0, "update:modelValue", () => $event => (_ctx.model = $event))
  return n0
}"
`;

exports[`compiler: vModel transform > modifiers > .number 1`] = `
"import { vModelText as _vModelText, withDirectives as _withDirectives, on as _on, template as _template } from 'vue/vapor';
const t0 = _template("<input>")

export function render(_ctx) {
  const n0 = t0()
  _withDirectives(n0, [[_vModelText, () => _ctx.model, void 0, { number: true }]])
  _on(n0, "update:modelValue", () => $event => (_ctx.model = $event))
  return n0
}"
`;

exports[`compiler: vModel transform > modifiers > .trim 1`] = `
"import { vModelText as _vModelText, withDirectives as _withDirectives, on as _on, template as _template } from 'vue/vapor';
const t0 = _template("<input>")

export function render(_ctx) {
  const n0 = t0()
  _withDirectives(n0, [[_vModelText, () => _ctx.model, void 0, { trim: true }]])
  _on(n0, "update:modelValue", () => $event => (_ctx.model = $event))
  return n0
}"
`;

exports[`compiler: vModel transform > should support input (checkbox) 1`] = `
"import { vModelCheckbox as _vModelCheckbox, withDirectives as _withDirectives, on as _on, template as _template } from 'vue/vapor';
const t0 = _template("<input type=\\"checkbox\\">")

export function render(_ctx) {
  const n0 = t0()
  _withDirectives(n0, [[_vModelCheckbox, () => _ctx.model]])
  _on(n0, "update:modelValue", () => $event => (_ctx.model = $event))
  return n0
}"
`;

exports[`compiler: vModel transform > should support input (dynamic type) 1`] = `
"import { vModelDynamic as _vModelDynamic, withDirectives as _withDirectives, on as _on, template as _template } from 'vue/vapor';
const t0 = _template("<input>")

export function render(_ctx) {
  const n0 = t0()
  _withDirectives(n0, [[_vModelDynamic, () => _ctx.model]])
  _on(n0, "update:modelValue", () => $event => (_ctx.model = $event))
  return n0
}"
`;

exports[`compiler: vModel transform > should support input (radio) 1`] = `
"import { vModelRadio as _vModelRadio, withDirectives as _withDirectives, on as _on, template as _template } from 'vue/vapor';
const t0 = _template("<input type=\\"radio\\">")

export function render(_ctx) {
  const n0 = t0()
  _withDirectives(n0, [[_vModelRadio, () => _ctx.model]])
  _on(n0, "update:modelValue", () => $event => (_ctx.model = $event))
  return n0
}"
`;

exports[`compiler: vModel transform > should support input (text) 1`] = `
"import { vModelText as _vModelText, withDirectives as _withDirectives, on as _on, template as _template } from 'vue/vapor';
const t0 = _template("<input type=\\"text\\">")

export function render(_ctx) {
  const n0 = t0()
  _withDirectives(n0, [[_vModelText, () => _ctx.model]])
  _on(n0, "update:modelValue", () => $event => (_ctx.model = $event))
  return n0
}"
`;

exports[`compiler: vModel transform > should support select 1`] = `
"import { vModelSelect as _vModelSelect, withDirectives as _withDirectives, on as _on, template as _template } from 'vue/vapor';
const t0 = _template("<select></select>")

export function render(_ctx) {
  const n0 = t0()
  _withDirectives(n0, [[_vModelSelect, () => _ctx.model]])
  _on(n0, "update:modelValue", () => $event => (_ctx.model = $event))
  return n0
}"
`;

exports[`compiler: vModel transform > should support simple expression 1`] = `
"import { vModelText as _vModelText, withDirectives as _withDirectives, on as _on, template as _template } from 'vue/vapor';
const t0 = _template("<input>")

export function render(_ctx) {
  const n0 = t0()
  _withDirectives(n0, [[_vModelText, () => _ctx.model]])
  _on(n0, "update:modelValue", () => $event => (_ctx.model = $event))
  return n0
}"
`;

exports[`compiler: vModel transform > should support textarea 1`] = `
"import { vModelText as _vModelText, withDirectives as _withDirectives, on as _on, template as _template } from 'vue/vapor';
const t0 = _template("<textarea></textarea>")

export function render(_ctx) {
  const n0 = t0()
  _withDirectives(n0, [[_vModelText, () => _ctx.model]])
  _on(n0, "update:modelValue", () => $event => (_ctx.model = $event))
  return n0
}"
`;

exports[`compiler: vModel transform > should support w/ dynamic v-bind 1`] = `
"import { vModelDynamic as _vModelDynamic, withDirectives as _withDirectives, on as _on, renderEffect as _renderEffect, setDynamicProps as _setDynamicProps, template as _template } from 'vue/vapor';
const t0 = _template("<input>")

export function render(_ctx) {
  const n0 = t0()
  _withDirectives(n0, [[_vModelDynamic, () => _ctx.model]])
  _on(n0, "update:modelValue", () => $event => (_ctx.model = $event))
  _renderEffect(() => _setDynamicProps(n0, _ctx.obj))
  return n0
}"
`;

exports[`compiler: vModel transform > should support w/ dynamic v-bind 2`] = `
"import { vModelDynamic as _vModelDynamic, withDirectives as _withDirectives, on as _on, template as _template } from 'vue/vapor';
const t0 = _template("<input>")

export function render(_ctx) {
  const n0 = t0()
  _withDirectives(n0, [[_vModelDynamic, () => _ctx.model]])
  _on(n0, "update:modelValue", () => $event => (_ctx.model = $event))
  return n0
}"
`;
